# Work-time-allocation-generator

./: Readme.md  config_example.json  main.py  pyproject.toml  utils.py
